// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsSection should render default items section 1`] = `
.c3 {
  margin: 0;
  font-weight: 400;
}

.c3.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c3.kirk-text-body,
.c3.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c3.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c3.kirk-text-title,
.c3.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c3.kirk-text-display2 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
  font-weight: 500;
}

.c3.kirk-text-display1 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
  font-weight: 500;
}

.c3.kirk-text-subheader,
.c3.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c3.kirk-text-title,
.c3.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c3.kirk-text-bodyStrong,
.c3.kirk-text-subheaderStrong,
.c3.kirk-text-titleStrong {
  font-weight: 500;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c2.kirk-item--clickable:hover {
  background: #EDEDED;
}

.c2.kirk-item--hideHoverBackground.kirk-item--clickable:hover {
  background: none;
}

a.c2 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c2 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button:active.c2,
button:hover.c2 {
  outline: none;
}

.c2:disabled {
  cursor: default;
}

.c2 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c2 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c2 .kirk-item--strikethrough {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c2 .kirk-item-title--withButtonAddon {
  position: relative;
}

.c2 .kirk-item-leftAddon,
.c2 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c2 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c2.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

.c2 .kirk-item-title--withButtonAddon button {
  position: absolute;
  width: 24px;
  height: 24px;
  margin-left: 4px;
  bottom: 0;
}

.c1 .section-content {
  padding-left: 24px;
  padding-right: 24px;
}

.c0 .kirk-items-section-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:800px) {
  .c1 .section-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 662px;
  }

  .c1 .section-content.section-content--large {
    max-width: 1016px;
  }
}

<div
  className="c0 c1"
  role="presentation"
>
  <div
    className="section-content kirk-items-section-content"
  >
    <div
      className="kirk-item c2"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c3"
        >
          First item
        </div>
        <div
          className="kirk-text kirk-text-body kirk-item-body c3"
        >
          First info
        </div>
      </div>
    </div>
    <div
      className="kirk-item c2"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c3"
        >
          Second item
        </div>
        <div
          className="kirk-text kirk-text-body kirk-item-body c3"
        >
          Second info
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemsSection should render non-default items section 1`] = `
.c3 {
  margin: 0;
  font-weight: 400;
}

.c3.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c3.kirk-text-body,
.c3.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c3.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c3.kirk-text-title,
.c3.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c3.kirk-text-display2 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
  font-weight: 500;
}

.c3.kirk-text-display1 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
  font-weight: 500;
}

.c3.kirk-text-subheader,
.c3.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c3.kirk-text-title,
.c3.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c3.kirk-text-bodyStrong,
.c3.kirk-text-subheaderStrong,
.c3.kirk-text-titleStrong {
  font-weight: 500;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c2.kirk-item--clickable:hover {
  background: #EDEDED;
}

.c2.kirk-item--hideHoverBackground.kirk-item--clickable:hover {
  background: none;
}

a.c2 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c2 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button:active.c2,
button:hover.c2 {
  outline: none;
}

.c2:disabled {
  cursor: default;
}

.c2 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c2 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c2 .kirk-item--strikethrough {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c2 .kirk-item-title--withButtonAddon {
  position: relative;
}

.c2 .kirk-item-leftAddon,
.c2 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c2 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c2.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

.c2 .kirk-item-title--withButtonAddon button {
  position: absolute;
  width: 24px;
  height: 24px;
  margin-left: 4px;
  bottom: 0;
}

.c1 .section-content {
  padding-left: 24px;
  padding-right: 24px;
}

.c0 .kirk-items-section-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:800px) {
  .c1 .section-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 662px;
  }

  .c1 .section-content.section-content--large {
    max-width: 1016px;
  }
}

<div
  className="contentinfo c0 c1"
  role="presentation"
>
  <div
    className="section-content kirk-items-section-content"
  >
    <div
      className="kirk-item c2"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c3"
        >
          First item
        </div>
        <div
          className="kirk-text kirk-text-body kirk-item-body c3"
        >
          First info
        </div>
      </div>
    </div>
    <div
      className="kirk-item c2"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c3"
        >
          Second item
        </div>
        <div
          className="kirk-text kirk-text-body kirk-item-body c3"
        >
          Second info
        </div>
      </div>
    </div>
  </div>
</div>
`;
